Edited the creators name
Used a span within the paragraph to edit it.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     <div class="creator">
       <img src="/images/image-avatar.png">
       <span id="p1">
-        <p>Creation of </p>
-      </span>
-      <span id="name">
-         <p>Jules Wyvern</p>
+        <p>Creation of <span id="name">Jules Wyvern</span></p>
       </span>
     </div>
   </div>
